# display-switch

./: Cargo.toml  README.md
Linux/: Cargo.toml  README.md
Linux/src/: configuration.rs  display_control.rs  main.rs
Windows/: Cargo.toml
Windows/src/: configuration.rs  display_control.rs  logging.rs  main.rs
etc/: display-switch.service
