[package]
name = "display_switch"
version = "0.1.0"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
edition = "2018"

[dependencies]
config = "0.10.1"
dirs = "3.0.1"
serde = { version = "1.0.114", features = ["derive"] }
anyhow = "1.0.32"
log = "0.4.11"
log-panics = "2.0.0"
simplelog = "0.9.0"
ddc-hi = "0.3.0"
macro-attr = "0.2"
enum_derive = "0.1"
conv = "0.3"
failure = "0.1.8"
env_logger = "0.8.2"
udev = "0.5.0"
libc = "0.2.81"